# destruct-folder

./: LICENSE  README.md  build_venv.ps1  pyproject.toml
example/: basic.py
example/cache/foreach_folder/txt_folder_n1/: 1.txt  2.txt
example/cache/foreach_folder/txt_folder_n2/: 1.txt  2.txt
example/cache/foreach_folder/txt_folder_n3/: 1.txt  2.txt
example/cache/txt_folder4/: 1.txt  2.txt
example/cache/txt_folder6/: 1.txt  2.txt
example/data/txt_folder1/: 1.txt  2.txt
example/data/txt_folder2/: 1.txt  2.txt
example/data/txt_folder3/: 1.txt  2.txt
src/destructfolder/: destructfolder.py  image.py  numpy.py  opencv_util.py  path_util.py
